<resources>
    <string name="app_name">Hydraulica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hydraulica</string>
    <string name="nav_header_subtitle">Bikramjit Kaur Gill</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pressure">Pressure(in psi)</string>
    <string name="area">Cylinder Area(in sq.in.)</string>
    <string name="menu_home">Home</string>
    <string name="result">Result</string>
    <string name="about_app">Hydraulica is a very simple App that illustrates the use of Navigation Toolbar. It includes four Activities
    named as Calculate Force, Add Supplier, About Activity, Contact Us information. Hydraulica is a very user friendly Mobile APP developed for Smarthphones and Tablets that allows for the calculation of Cylinder Force.Developed in the latest version of Android using Jet Pack or API Level 30 (v30).
        It is available in both Java and Kotlin versions.Making use of the NavigationDrawer, ActionBar and FAB to allow for very user intuitive navigation.

</string>
    <string name="calculate">Calculate Power</string>
    <string name="supplier">Add Supplier</string>
    <string name="contact">Contact Us</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="text_calculate">Calculate Cylinder Force</string>
    <string name="blank">Blank</string>
    <string name="introduction"><b>HYDRAULICA</b></string>
    <string name="prepared"><b>Bikramjit Kaur Gill</b></string>
    <string name="contact_info">"Mechanical 2020 Inc. \n5555 Main St. (suite 101) \nToronto, ON \n M5M 5M5\n<b>tel.</b>: (416)555-5555
        \n<b>email</b>: <u>mechanical@somewhere.com</u> \n<b>url</b>: <u>http://www.senecacollege.ca</u>"</string>
    <string name="android_contacts">Android Contacts</string>
    <string name="allow_deny">Allow/Deny</string>

</resources>