<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_blank">

    <fragment
        android:id="@+id/nav_blank"
        tools:layout="@layout/blank"
        android:label="@string/app_name"
        android:name="com.example.hydraulica.ui.Blank.blank"/>

    <fragment
        android:id="@+id/nav_calculate"
        android:name="com.example.hydraulica.HomeFragment"
        android:label="@string/calculate"
        tools:layout="@layout/calculate_power" />

    <activity
        android:id="@+id/nav_supplier"
        android:name="com.example.hydraulica.AddSupplier"
        android:label="@string/supplier"
        tools:layout="@layout/add_supplier" />

    <activity
        android:id="@+id/nav_contact"
        android:name="com.example.hydraulica.ContactUs"
        android:label="@string/contact"
        tools:layout="@layout/contact_us" />


    <activity
        android:id="@+id/nav_about"
        android:name="com.example.hydraulica.About"
        android:label="@string/about"
        tools:layout="@layout/about_activity" />

    <fragment
        android:id="@+id/nav_exit"
        android:label="@string/exit" />
</navigation>