<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calculate"
            android:icon="@drawable/ic_baseline_calculate_24"
            android:title="@string/calculate" />
        <item
            android:id="@+id/nav_supplier"
            android:icon="@drawable/ic_baseline_add_reaction_24"
            android:title="@string/supplier" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_contact_mail"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_exit"
            android:title="@string/exit"/>
    </group>
</menu>