<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/animation"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/text_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/text_calculate"
        android:textAllCaps="true"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:textColorHighlight="@color/Purple"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHighlight="@color/Purple"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:hint="@string/pressure" />
    <EditText
        android:id="@+id/area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColorHighlight="@color/Purple"
        android:layout_gravity="center"
        android:hint="@string/area"/>
    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Blue"
        android:text="Calculate"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>



</LinearLayout>